# smoothoperator

./: .clang-format  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  GETTING_STARTED.md  GITHUB_READY.md  ISSUES.md  LICENSE  Makefile  P1.2_COMPLETE.md  P1_STATUS.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  START_HERE.md  SUMMARY.md  fix_plan.md  issues.md  memphis.env.example  smoothoperator.conf.example  smoothoperator.env.example  smoothoperator.json.example  smoothoperator.liq.example
.github/: README.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: API.md  ARCHITECTURE.md  PRODUCER_IMPLEMENTATION.md
include/: config.h  liquidsoap_client.h  ls_controller.h  memphis.h  message.h  rabbitmq_consumer.h  rabbitmq_producer.h  smoothoperator.h
scripts/: setup-amqp.sh  setup-service.sh
src/: config.c  liquidsoap_client.c  ls_controller.c  main.c  main.cpp  memphis_logging.c  message.c  rabbitmq_consumer.c  rabbitmq_producer.c  smoothoperator_logging.c
src/config/: config_parser.cpp
src/core/: state_manager.cpp
src/drivers/: liquidsoap_driver.cpp  rabbitmq_driver.cpp
test/: stress_test.py  test_config.c  test_liquidsoap_client.c  test_logging.c  test_ls_controller.c  test_message.c  test_runner.c
test/unit/: test_state_manager.cpp
tmp_install/cmake/: amqpcppConfig-release.cmake  amqpcppConfig.cmake
tmp_install/lib/pkgconfig/: amqpcpp.pc
